[package]
name = "pgp_expiration"
version = "0.1.0"
edition = "2021"
description = "Munin plugin that monitors pgp keys expiration date"
readme = "README.md"
repository = "https://github.com/golemfactory/munin-plugin-pgp-expiration"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1"
chrono = "0.4"
futures = "0.3"
lazy_static = "1"
regex = "1"
reqwest = "0.11"
ron = "0.7"
sequoia-net = "0.25"
sequoia-openpgp = "1.10"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt"] }
